--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: python
 python:
  - "2.7"
+
+services: docker
+before_install:
+ docker pull mitgcm/testreport-images:fc11-base-20170703
+ 
 install: "pip install -r requirements.txt"
+
 script: python mytest_driver
