--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
  - docker
 before_install:
  - docker pull mitgcm/testreport-images:fc11-base-20170703
+ - docker run -t -d mitgcm/testreport-images:fc11-base-20170703  /bin/bash
  
 install: 
  - "pip install -r requirements.txt"
