--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ services:
  - docker
 before_install:
  - docker pull mitgcm/testreport-images:fc11-base-20170703
- - docker run -t -d mitgcm/testreport-images:fc11-base-20170703  /bin/bash
+ - docker run --name fc11-testreport -t -d mitgcm/testreport-images:fc11-base-20170703  /bin/bash
+ - docker exec -i fc11-testreport rpm -vv --rebuilddb
  
 install: 
  - "pip install -r requirements.txt"
