--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
  - docker pull mitgcm/testreport-images:fc11-base-20170703
  - docker run --name fc11-testreport -t -d mitgcm/testreport-images:fc11-base-20170703  /bin/bash
  - docker exec -i fc11-testreport rpm -vv --rebuilddb
+ - docker exec -i fc11-testreport df -h
  
 install: 
  - "pip install -r requirements.txt"
