--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
  - docker run --name fc11-testreport -t -d mitgcm/testreport-images:fc11-base-20170703  /bin/bash
  - docker exec -i fc11-testreport rpm -vv --rebuilddb
  - docker exec -i fc11-testreport df -h
+ - docker exec -i fc11-testreport yum install python-pip
  
 install: 
  - "pip install -r requirements.txt"
