--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
  - docker pull mitgcm/testreport-images:fc11-base-20170703
  - docker run  -v /home/travis/build/mitgcm/basic-python-examples:/tmp --name fc11-testreport -t -d mitgcm/testreport-images:fc11-base-20170703 /bin/bash
  - docker exec -i fc11-testreport rpm -vv --rebuilddb
- - docker exec  -v /home/travis/build/mitgcm/basic-python-examples:/tmp -i fc11-testreport df -h
+ - docker exec -i fc11-testreport df -h
+ - docker exec -i fc11-testreport ls -altr /tmp
  - docker exec -i fc11-testreport yum install python-pip
  
 install: 
