--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
  - docker exec -i fc11-testreport df -h
  - docker exec -i fc11-testreport ls -altr /container/`pwd`
  - docker exec -i fc11-testreport yum install python-pip
+ - docker exec -i fc11-testreport yum install gcc-gfortran
  
 install: 
  - "pip install -r requirements.txt"
@@ -21,4 +22,5 @@ install:
 script: 
  - echo `pwd`
  - docker exec -i fc11-testreport df -h
+ - docker exec -i fc11-testreport gfortran
  - python mytest_driver
