--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,5 @@ script:
  - echo `pwd`
  - docker exec -i fc11-testreport df -h
  - docker exec -i fc11-testreport gfortran
+ - docker exec -i fc11-testreport "cd verification"
  - python mytest_driver
