--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ services:
  - docker
 before_install:
  - docker pull mitgcm/testreport-images:fc11-base-20170715
- - docker run  -v `pwd`:/container/`pwd` --name fc11-testreport -t -d mitgcm/testreport-images:fc11-base-20170715 /bin/bash
+ - docker run  -v ./:/MITgcm --name fc11-testreport -t -d mitgcm/testreport-images:fc11-base-20170715 /bin/bash
  - docker exec -i fc11-testreport rpm -vv --rebuilddb
  - docker exec -i fc11-testreport df -h
- - docker exec -i fc11-testreport ls -altr /container/`pwd`
+ - docker exec -i fc11-testreport ls -altr /MITgcm
  - docker exec -i fc11-testreport yum install python-pip
  - docker exec -i fc11-testreport yum install gcc-gfortran
  
@@ -23,5 +23,5 @@ script:
  - echo `pwd`
  - docker exec -i fc11-testreport df -h
  - docker exec -i fc11-testreport gfortran
- - docker exec -i fc11-testreport bash -c "cd verification; pwd; ls -altr"
+ - docker exec -i fc11-testreport bash -c "cd /MITgcm/verification; pwd; ls -altr"
  - python mytest_driver
