--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
  - docker
 before_install:
  - docker pull mitgcm/testreport-images:fc11-base-20170715
- - docker run  -v ./:/MITgcm --name fc11-testreport -t -d mitgcm/testreport-images:fc11-base-20170715 /bin/bash
+ - docker run  -v .:/MITgcm --name fc11-testreport -t -d mitgcm/testreport-images:fc11-base-20170715 /bin/bash
  - docker exec -i fc11-testreport rpm -vv --rebuilddb
  - docker exec -i fc11-testreport df -h
  - docker exec -i fc11-testreport ls -altr /MITgcm
