--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ script:
  - echo `pwd`
  - docker exec -i fc11-testreport df -h
  - docker exec -i fc11-testreport gfortran
- - docker exec -i fc11-testreport bash -c "cd /MITgcm/`pwd`; pwd; ls -altr"
+ - docker exec -i fc11-testreport bash -c "cd /MITgcm; pwd; ls -altr"
  - python mytest_driver
